# TripleQuant-VLM

./: .gitignore  README.md  benchmark.py  pyproject.toml  quantize.py  run_bench.py  run_quant.py
configs/: base.yaml
configs/benchmark/: ocr_comparison.yaml  qwen25_3b_comparison.yaml
configs/benchmarks/: ocr_vqa.yaml
configs/models/: qwen25vl_3b.yaml
configs/quantization/: awq.yaml
configs/quantize/: qwen25_3b_awq.yaml  qwen25vl_3b_awq.yaml  qwen25vl_3b_gptq.yaml  qwen25vl_7b_awq.yaml
data/: processors.py
eval/: __init__.py  accuracy.py  eval_runner.py  latency.py  memory.py  perplexity.py
models/: .gitkeep
quantization/: __init__.py  autoround.py  awq_quant.py  base_quantizer.py  gptq_quant.py  quant_utils.py
src/: __init__.py
src/config/: __init__.py  loader.py  schemas.py
src/data/: __init__.py  processors.py
src/evaluation/: __init__.py  accuracy.py  latency.py  memory.py  perplexity.py
src/quantization/: __init__.py  awq.py  base.py  gptq.py  registry.py
utils/: config_parser.py
